--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
+chardet==3.0.4
 ImageHash==4.0
 numpy==1.17.2
 opencv-python==4.1.1.26
 Pillow==6.1.0
-pytesseract==0.3.0
-pytube==9.5.2
-pytube3==9.6.0
+pysrt==1.1.2
+pytesseract==0.3.2
+pytube==9.6.0
+pytube3==9.6.4
 PyWavelets==1.0.3
 scipy==1.3.1
 six==1.12.0
