--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,17 @@
+certifi==2020.11.8
 chardet==3.0.4
+idna==2.10
 ImageHash==4.0
 numpy==1.17.2
 opencv-python==4.1.1.26
 Pillow==6.1.0
 pysrt==1.1.2
 pytesseract==0.3.2
-pytube==9.6.0
-pytube3==9.6.4
+pytube==9.7.0
 PyWavelets==1.0.3
+requests==2.25.0
 scipy==1.3.1
 six==1.12.0
 srt==3.0.0
 typing-extensions==3.7.4.1
+urllib3==1.26.2
